fixed nav logo visibility

--- a/style.css
+++ b/style.css
@@ -160,7 +160,6 @@ img {
     width: 100%;
     height: 100%;
     max-height: 50vh;
-    padding: 48px;
 }
 
 p {
@@ -206,11 +205,11 @@ button:active {
 
 .header__img--wrapper {
     padding: 20px;
+    margin-bottom: 48px;
 }
 
 .container {
     padding: 56px 0;
-
 }
 
 .row {
